# semantic-checksum

./: README.md  pyproject.toml
.github/workflows/: ci.yml
data/: golden.json
src/semantic_checksum/: __init__.py  __main__.py  checksum.py  cli.py  diff.py  score.py
tests/: test_core.py  test_security.py
