[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "semantic-checksum"
version = "0.1.0"
description = "Deterministic diff for explicitly annotated bilingual requirement fields"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Takeru Kondo" }]
keywords = ["bilingual", "requirements", "drift", "checksum", "cli"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
]
dependencies = []

[project.optional-dependencies]
dev = ["build>=1.2", "pytest>=8.0"]

[project.scripts]
semantic-checksum = "semantic_checksum.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
